third_party/WebKit/WebCore/loader/DocumentLoader.cpp
@@ -447,7 +447,9 @@ void DocumentLoader::setPrimaryLoadComplete(bool flag)
 #endif
             m_mainResourceLoader = 0;
         }
-        updateLoading();
+
+        if (this == frameLoader()->activeDocumentLoader())
+            updateLoading();
     }
 }
 
